# ds-pj

./: .clang-format  .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  CopyOfCMakeCache.txt  algo.cpp  algo.h  build.ninja  compile_commands.json  data_loader.cpp  data_loader.h  edge.cpp  edge.h  main.cpp  node.cpp  node.h  out.txt  quad_edge_tree.cpp  quad_edge_tree.h  quad_polygon_tree.cpp  quad_polygon_tree.h  quad_tree.cpp  quad_tree.h  readme.md  route_find_nearest_node.cpp  route_find_path.cpp  route_get_edges.cpp  route_nodes.cpp  route_salesman.cpp  routes.cpp  routes.h  server  server.bak  shared.cpp  talk1.md  utils.cpp  utils.h  way.h
